# flexout

./: .gitmodules  CMakeLists.txt
cmake/Modules/: FindNetCDF.cmake
src/: CMakeLists.txt  field_manager.F90  flexout_version.F90.in  output_manager.F90  output_manager_core.F90
src/formats/: memory_output.F90  netcdf_output.F90  text_output.F90
src/operators/: base.F90  interp.F90  library.F90  time_average.F90
test/: CMakeLists.txt  test_flexout.F90
